# raycasting-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: constants.h  main.c  map.c  map.h  player.c  player.h  raycaster.c  raycaster.h  renderer.c  renderer.h
